--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["invitation", "birthday", "rsvp"],
+  "keywords": [
+    "invitation",
+    "birthday",
+    "rsvp"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/kv": "^1.0.1",
     "cors": "^2.8.5",
-    "@vercel/kv": "^1.0.1"
+    "express": "^4.18.2"
   }
 }
