--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
             "destination": "/api/$1"
         },
         {
+            "source": "/",
+            "destination": "/public/index.html"
+        },
+        {
             "source": "/(.*)",
             "destination": "/public/$1"
         }
