--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/kv": "^1.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^7.0.0"
+  },
+  "devDependencies": {
+    "vercel": "^50.1.0"
   }
 }
